--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "suggest.noselect": false,
-  "coc.preference.formatOnSaveFiletypes": [
+  "coc.preferences.formatOnSaveFiletypes": [
     "css",
     "markdown",
     "javascript",
@@ -11,6 +11,13 @@
     "typescript.tsx",
     "graphql"
   ],
-  "languageserver": {
-  }
+  "languageserver": {},
+  "coc.preferences.formatOnType": true,
+  "tsserver.formatOnType": true,
+  "tsserver.log": "verbose",
+  "tsserver.trace.server": "verbose",
+  "prettier.eslintIntegration": false,
+  "eslint.packageManager": "yarn",
+  "eslint.autoFixOnSave": true,
+  "prettier.disableSuccessMessage": true
 }
