--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,21 +1,1 @@
-{
-  "suggest.noselect": false,
-  "coc.preferences.formatOnType": true,
-  "coc.preferences.formatOnSaveFiletypes": [
-    "css",
-    "markdown",
-    "javascript",
-    "typescript",
-    "typescriptreact",
-    "json",
-    "javascriptreact",
-    "typescript.tsx",
-    "graphql"
-  ],
-  "tsserver.formatOnType": true,
-  "tsserver.log": "verbose",
-  "tsserver.trace.server": "verbose",
-  "eslint.packageManager": "yarn",
-  "eslint.autoFixOnSave": true,
-  "prettier.disableSuccessMessage": true
-}
+.vim/coc-settings.json
